--- a/community/template/setup_profile.html
+++ b/community/template/setup_profile.html
@@ -60,8 +60,9 @@
 <div class="az-header" style="position: fixed; z-index:2; width:100%;">
     <div class="container">
         <div class="az-header-left">
-            <a href="index.html" class="az-logo"><span></span> azia</a>
-            <a href="#" id="azMenuShow" class="az-header-menu-icon d-lg-none"><span></span></a>
+            <a href="index.html" style="padding: 1rem;" class="az-logo">
+                <img src="../../logo.png" style="height: 3rem;">
+            </a>
         </div><!-- az-header-left -->
         <div class="az-header-menu">
             <div class="az-header-menu-header">
