--- a/community/template/setup_profile.html
+++ b/community/template/setup_profile.html
@@ -249,13 +249,15 @@
                         <label class="ckbox mg-b-5">
                             <input type="checkbox" name="browser[]" value="1" data-parsley-mincheck="2"
                                    data-parsley-class-handler="#cbWrapper2"
-                                   data-parsley-errors-container="#cbErrorContainer2" required><span>Email Notification</span>
+                                   data-parsley-errors-container="#cbErrorContainer2"
+                                   required><span>Email Notification</span>
                         </label>
 
                         <label class="ckbox mg-b-5">
                             <input type="checkbox" name="browser[]" value="1" data-parsley-mincheck="2"
                                    data-parsley-class-handler="#cbWrapper2"
-                                   data-parsley-errors-container="#cbErrorContainer2" required><span>Email Notification</span>
+                                   data-parsley-errors-container="#cbErrorContainer2"
+                                   required><span>Email Notification</span>
                         </label>
                     </div>
                 </section>
