changes on welcome page

--- a/template/community/template/login.html
+++ b/template/community/template/login.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  
+
     <meta name="description" content="Responsive Bootstrap 4 Dashboard Template">
     <meta name="author" content="BootstrapDash">
 
@@ -30,7 +30,7 @@
                 <h1>
                     <a href="index.html">
                         <span>G</span><span style="color: black; background-color: #FFFFFF; padding: 1px;">erminate</span>
-                        <p style="font-size: 15px;">Grow healthy products</p>
+<!--                        <p style="font-size: 15px;">Grow healthy products</p>-->
                     </a>
                 </h1>
             </div>
