--- a/template/community/template/signup.html
+++ b/template/community/template/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   
+
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -29,12 +29,13 @@
 <div class="az-signup-wrapper">
     <div class="az-column-signup-left">
         <div>
-           
+
             <img src="../../logo.png">
-            <h5>Responsive Modern Dashboard &amp; Admin Template</h5>
-            <p>We are excited to launch our new company and product Azia. After being featured in too many magazines to
-                mention and having created an online stir, we know that BootstrapDash is going to be big. We also hope
-                to win Startup Fictional Business of the Year this year.</p>
+            <p>welcome to Farm Social Network</p>
+<!--            <h5>Responsive Modern Dashboard &amp; Admin Template</h5>-->
+<!--            <p>We are excited to launch our new company and product Azia. After being featured in too many magazines to-->
+<!--                mention and having created an online stir, we know that BootstrapDash is going to be big. We also hope-->
+<!--                to win Startup Fictional Business of the Year this year.</p>-->
             <p>Browse our site and see for yourself why you need Azia.</p>
             <a href="index.html" class="btn btn-outline-success">Learn More</a>
         </div>
